<resources>
    <string name="app_name">Hiki List</string>
    <string name="auth_canceled">Аутентификация не выполнена</string>
    <string name="sign_in">Войти</string>
    <string name="avatar">Аватар пользователя</string>
    <string name="age_1">%1$d год</string>
    <string name="age_2">%1$d годa</string>
    <string name="age_3">%1$d лет</string>
    <string name="website">Сайт</string>
    <string name="planned">Запланировано</string>
    <string name="watching">Смотрю</string>
    <string name="rewatching">Пересматриваю</string>
    <string name="completed">Просмотренно</string>
    <string name="on_hold">Отложено</string>
    <string name="dropped">Брошено</string>

    <string name="planned_with_count">Запланировано %1$d</string>
    <string name="watching_with_count">Смотрю %1$d</string>
    <string name="rewatching_with_count">Пересматриваю %1$d</string>
    <string name="completed_with_count">Просмотренно %1$d</string>
    <string name="on_hold_with_count">Отложено %1$d</string>
    <string name="dropped_with_count">Брошено %1$d</string>
    <string name="anime_poster">Обложка аниме</string>
    <string name="starred">Избранное</string>
    <string name="history">История</string>
    <string name="show_description">Показать описание</string>
    <string name="hide_description">Скрыть описание</string>
    <string name="on_people_lists">В списках у людей</string>
    <string name="people_ratings">Оценки людей</string>
    <string name="rating">Рейтинг</string>
    <string name="your_score">Ваша оценка</string>
    <string name="common_rating">Общая оценка</string>
    <string name="functionality_not_implemented_yet">Данный функционал еще не реализован</string>

    <string name="rating_g">Рейтинг: G</string>
    <string name="rating_none">Рейтинг отсутствует</string>
    <string name="rating_pg">Рейтинг: PG</string>
    <string name="rating_pg_13">Рейтинг: PG-13</string>
    <string name="rating_r">Рейтинг: R</string>
    <string name="rating_r_plus">Рейтинг: R+</string>
    <string name="rating_rx">Рейтинг: Rx</string>

    <string name="screenshot">Скриншот</string>

    <string name="count_format">%1$d из %2$d</string>
    <string name="screenshots">Скриншоты</string>
    <string name="videos">Видео</string>
    <string name="video">Видео</string>
    <string name="add_to_list">Добавить в список</string>
    <string name="add_to_starred">Добавить в избранное</string>
    <string name="list">Список</string>

    <array name="statuses">
        <item>@string/planned</item>
        <item>@string/watching</item>
        <item>@string/rewatching</item>
        <item>@string/completed</item>
        <item>@string/on_hold</item>
        <item>@string/dropped</item>
    </array>

    <array name="statuses_with_count">
        <item>@string/planned_with_count</item>
        <item>@string/watching_with_count</item>
        <item>@string/rewatching_with_count</item>
        <item>@string/completed_with_count</item>
        <item>@string/on_hold_with_count</item>
        <item>@string/dropped_with_count</item>
    </array>

    <string name="action_settings">Settings</string>
    <string name="no_description">Описание отсутствует</string>
    <string name="anons">Анонс</string>
    <string name="ongoing">Онгоинг</string>
    <string name="released">Вышло</string>
    <string name="anons_for">Анонсировано на %1$s</string>
    <string name="ongoing_from">"Онгоинг с %1$s"</string>
    <string name="released_on">"Вышло %1$s"</string>
    <string name="to_list">В список</string>
    <string name="select_list">Выбирите список</string>
    <string name="cancel">Отмена</string>
    <string name="statistic">Статистика</string>
    <string name="info">Информация</string>
    <string name="other_titles">Альтернативные названия</string>
    <string name="alt_titles">Другие названия: %1$s</string>
    <string name="another_websites">Другие сайты</string>
    <string name="type_tv">Тип: TV Сериал</string>
    <string name="type_movie">Тип: Фильм</string>
    <string name="type_ova">Тип: OVA</string>
    <string name="type_ona">Тип: ONA</string>
    <string name="type_special">Тип: Спешл</string>
    <string name="type_music">Тип: Музыка</string>
    <string name="episodes_of">"Эпизоды: %1$d/%2$d"</string>
    <string name="episodes_of_null">"Эпизоды: %1$d/?"</string>
    <string name="episodes_of_with_count">"Просмотрено: %1$d/%2$d (%3$d)"</string>
    <string name="episodes_of_with_null">"Просмотрено: %1$d/%2$d (?)"</string>
    <string name="episodes">Эпизоды: %1$d</string>
    <string name="episodes_with_count">Просмотрено: %1$d/%2$d</string>
    <string name="ongoing_from_to">Онгоинг с %1$s по %2$s</string>
    <string name="fandubbers">Озвучка</string>
    <string name="fansubbers">Субтитры</string>
    <string name="in_english">По-английски: %1$s</string>
    <string name="in_japanese">По-японски: %1$s</string>
    <string name="studios">Студия: %1$s</string>
    <string name="main_characters">Главные герои</string>
    <string name="profile">Профиль</string>
    <string name="lists">Списки</string>
    <string name="list_is_empty">Список пуст</string>
    <string name="your_score_with_score">"Ваша оценка: %1$d"</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="search_anime">Поиск аниме</string>
    <string name="not_found">Ничего не найдено</string>

    <string name="appearance">Оформление</string>

    <string name="settings">Настройки</string>
    <string name="about_application">О приложении</string>
    <string name="content">Контент</string>
    <string name="app_version">"Версия: %1$s"</string>
    <string name="titles_will_not_be_truncated_in_lists">Названия не будут обрезаться в списках</string>
    <string name="full_anime_titles">Полные названия аниме</string>
    <string name="rx_rated_anime_will_be_displayed">Аниме с рейтингом Rx будет отображаться</string>
    <string name="show_nsfw_anime">Показывать NSFW аниме</string>
    <string name="reference_kitty">Вы нашли отсылку на ковайную кошечку!</string>
    <string name="reference_kidala">Поздравляем, вас кинули!</string>
    <string name="search_in">Поиск в %1$s</string>
    <string name="anime">Аниме</string>
    <string name="user_history">"История %1$s"</string>
    <string name="history_loading_error">Не удалось загрузить историю</string>
    <string name="favorites">Избранное</string>
    <string name="user_favorites">"Избранное %1$s"</string>
    <string name="favorites_loading_error">Не удалось загрузить избранное</string>
    <string name="manga">Манга</string>
    <string name="ranobe">Ранобэ</string>
    <string name="characters">Персонажи</string>
    <string name="producers">Продюсеры</string>
    <string name="seyu">Сэйю</string>
    <string name="mangakas">Мангаки</string>
    <string name="people">Люди</string>
    <string name="search">Поиск</string>
    <string name="news">Новости</string>
    <string name="no_title">Названия еще нет</string>
    <string name="auth_about">Это приложение является неофициальным клиентом сайта shikimori. В этом приложении вы можете отслеживать свои списки аниме, а также открывать некоторые страницы сайта прямо в приложении. Например: аниме, историю пользователя или его избранное. Для начала вам нужно авторизироваться на сайте, что я настоятельно рекомендую сделать прямо сейчас. Некоторые функции доступны без авторизации, но доступа к ним у вас не будет, не благодарите.</string>
    <string name="error_loading_anime">Не удалось загрузить аниме</string>
    <string name="move_anime_to">%1$s перемещено в %2$s</string>
    <string name="logout">Выйти</string>
    <string name="scores">Оценка: %1$d (%2$s)</string>
    <string name="score">Оценка: %1$s</string>
    <string name="user_score">Ваша оценка: %1$d</string>
    <string name="clubs">Клубы</string>
    <string name="friends">Друзья</string>

</resources>