<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/container_padding">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            android:scrollbars="none"
            app:contentInsetStartWithNavigation="0dp"
            app:layout_scrollFlags="scroll|enterAlways">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup_lists"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll|enterAlways"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_planned"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/planned"
                    android:textSize="12sp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_watching"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/watching"
                    android:textSize="12sp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_completed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/completed"
                    android:textSize="12sp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_rewatching"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rewatching"
                    android:textSize="12sp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_on_hold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/on_hold"
                    android:textSize="12sp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_dropped"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dropped"
                    android:textSize="12sp" />

            </com.google.android.material.chip.ChipGroup>

        </HorizontalScrollView>
    </com.google.android.material.appbar.AppBarLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView_list_is_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/list_is_empty"
        android:visibility="gone" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            android:paddingHorizontal="@dimen/container_padding"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="3"
            tools:listitem="@layout/item_anime_list" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>