<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:contentInsetStartWithNavigation="0dp"
            app:layout_scrollFlags="scroll|enterAlways"
            app:title="@string/profile" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            android:scrollbars="none">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/avatar"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="32dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearanceOverlay="@style/ShapeAppearance.Shikimori.Circle"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/username"
                    style="?attr/textAppearanceHeadline5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/avatar"
                    tools:text="@tools:sample/first_names" />

                <TextView
                    android:id="@+id/age"
                    style="?textAppearanceBodySmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/username"
                    tools:text="Age" />

                <TextView
                    android:id="@+id/website"
                    style="?textAppearanceBodySmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:autoLink="web"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/age"
                    tools:text="Site" />

                <LinearLayout
                    android:id="@+id/info_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:baselineAligned="false"
                    android:divider="?colorOutline"
                    android:dividerPadding="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/container_padding"
                    android:showDividers="middle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/website">

                    <Button
                        android:id="@+id/favorites_btn"
                        style="@style/Widget.Shikimori.TextButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="4dp"
                        android:text="@string/starred"
                        android:textAlignment="center"
                        android:drawablePadding="4dp"
                        app:drawableTint="?colorPrimary"
                        app:drawableTopCompat="@drawable/ic_star_outline" />

                    <Button
                        android:id="@+id/clubs_btn"
                        style="@style/Widget.Shikimori.TextButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="4dp"
                        android:text="@string/clubs"
                        android:textAlignment="center"
                        android:drawablePadding="4dp"
                        app:drawableTint="?colorPrimary"
                        app:drawableTopCompat="@drawable/ic_puzzle" />

                    <Button
                        android:id="@+id/friends_btn"
                        style="@style/Widget.Shikimori.TextButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="4dp"
                        android:text="@string/friends"
                        android:textAlignment="center"
                        android:drawablePadding="4dp"
                        app:drawableTint="?colorPrimary"
                        app:drawableTopCompat="@drawable/ic_persons" />

                    <Button
                        android:id="@+id/history_btn"
                        style="@style/Widget.Shikimori.TextButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="4dp"
                        android:text="@string/history"
                        android:textAlignment="center"
                        android:drawablePadding="4dp"
                        app:drawableTint="?colorPrimary"
                        app:drawableTopCompat="@drawable/ic_clock" />

                </LinearLayout>

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/chart"
                    android:layout_width="0dp"
                    android:layout_height="156dp"
                    android:layout_marginTop="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/info_layout" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>